--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&family=Fraunces:wght@900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.mini.css">
 </head>
 <body>
     
@@ -130,7 +130,7 @@
                         </a>
                     </li>
                     <li class="site-nav__item">
-                        <a class="site-nav__link" href="#">
+                        <a class="site-nav__link" href="about-us.html">
                             About us
                         </a>
                     </li>
